--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,11 @@
   align-items: center;
   justify-content: flex-end;
 }
+
+.weather_container {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 400px;
+}
