--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,12 @@ svg {
   height: 150px;
   width: 300px;
 }
+
+.table-container {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 70px;
+}
