--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,8 @@ table th {
   padding: 10px 0;
   font-size: 14px;
   padding: 15px;
-  background-color: #FFC107;
-  color: #fff;
+  background-color: #f3e98e;
+  /* color: #fff; */
 }
 
 table tr {
