--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,12 @@ svg {
 }
 
 .table-container {
-  margin: auto;
+  /* margin: auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 70px;
+  margin: 70px 3% 3% 3%;
   /* overflow-x:auto; */
 }
 
