change search form design

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,54 @@
   justify-content: flex-end;
 }
 
+/* .search-form {
+  max-width: 300px;
+  margin-bottom: 20px;
+} */
+
+.search-input {
+  outline: none;
+  height:35px;
+  padding:0 10px;
+  width:150px;
+  border-radius:5px;
+  background-color:#4e6272;
+  color: white;
+  margin-right: 40px;
+}
+
+input:hover {
+  background-color: #738693;
+}
+
+input::placeholder {
+  color: #a8b7c4;
+}
+
+.search-btn {
+  width:30px;
+  height:30px;
+  border-radius:50px;
+  background:#3FAAFF;
+  color:#fff;
+  /* font-weight:bold; */
+  font-size:16px;
+  border:none;
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  /* left: 255px; */
+  /*アイコン左右の位置調整*/
+  /* top: 0; */
+  border: 0;
+  font-size: 15px;
+  /*アイコンサイズ*/
+}
+
+.search-btn:hover {
+  background-color: #7fbfff;
+}
+
 .content-container {
   margin: auto;
   display: flex;
