--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,22 @@
   justify-content: flex-end;
 }
 
+.spinner {
+  width: 32px;
+  height: 32px;
+  margin: 10px auto;
+  border: 4px #ddd solid;
+  border-top: 4px #3FAAFF solid;
+  border-radius: 50%;
+  animation: sp-anime 1.0s infinite linear;
+}
+
+@keyframes sp-anime {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* .search-form {
   max-width: 300px;
   margin-bottom: 20px;
