--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   justify-content: flex-end;
 }
 
+.main-page {
+  margin-top: 100px;
+}
+
 .spinner {
   width: 32px;
   height: 32px;
@@ -61,18 +65,13 @@ input::placeholder {
   border-radius:50px;
   background:#3FAAFF;
   color:#fff;
-  /* font-weight:bold; */
   font-size:16px;
   border:none;
   position: absolute;
   top: 20px;
   right: 45px;
-  /* left: 255px; */
-  /*アイコン左右の位置調整*/
-  /* top: 0; */
   border: 0;
   font-size: 15px;
-  /*アイコンサイズ*/
 }
 
 .search-btn:hover {
@@ -144,4 +143,8 @@ table tr {
 
 table tr:hover {
   background-color: #F5F5F5;
+}
+
+.icon {
+  font-size: 28px;
 }
